--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,12 @@
   <hr>
   <div class="row">
     <div class="col-xs-12">
+      <button class="btn btn-primary" (click)="onChangeFirst()">Change first element</button>
+      <button class="btn btn-danger" (click)="onDestroyFirst()">Delete first element</button>
       <app-server-element *ngFor="let serverElement of serverElements"
-      [srvElement]="serverElement">
-      <p>
+      [srvElement]="serverElement"
+      [name]="serverElement.name">
+      <p #para>
         <strong *ngIf="serverElement.type === 'server'" style="color: red">{{ serverElement.content }}</strong>
         <em *ngIf="serverElement.type === 'blueprint'">{{ serverElement.content }}</em>
       </p>
